# quadcopter-simulation

./: .gitignore  CMakeLists.txt  README.md
src/: accelerometer.h  barometer.h  gyroscope.h  irr_coordinate_axes.h  irr_event_receiver.h  irr_quadcopter_3D.h  irr_renderer.h  magnetometer.h  main.cpp  quadcopter.cpp  quadcopter.h  receiver.cpp  receiver.h  sensorFusion.h  stabilizer.h  utils_diffequation.h
telemetry/: drone_simulator.cpp  mavlink_handler.cpp  mavlink_handler.h  utils.cpp  utils.h
